[package]
name = "beat-saber-stats"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.34.0"
serde = { version = "^1.0.136", features = ["derive"] }
serde_json = "^1.0.79"
sha-1 = "^0.10.0"
hex = "^0.4.3"
csv = "^1.1.6"
num_cpus = "^1.13.1"
log = "^0.4.16"
env_logger = "^0.9.0"
